--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -14,7 +14,11 @@
         android:ems="10"
         android:inputType="textPassword"
         app:layout_editor_absoluteX="128dp"
-        app:layout_editor_absoluteY="45dp"/>
+        app:layout_editor_absoluteY="45dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 
     <EditText
         android:id="@+id/pass2"
@@ -23,7 +27,11 @@
         android:ems="10"
         android:inputType="textPassword"
         app:layout_editor_absoluteY="88dp"
-        app:layout_editor_absoluteX="128dp" />
+        app:layout_editor_absoluteX="128dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/pass1"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/createPasswordButton"
@@ -31,7 +39,13 @@
         android:layout_height="wrap_content"
         android:text="Create"
         app:layout_editor_absoluteX="128dp"
-        app:layout_editor_absoluteY="131dp" />
+        app:layout_editor_absoluteY="131dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/pass2"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:id="@+id/textView"
@@ -39,7 +53,13 @@
         android:layout_height="46dp"
         android:text="Password Again"
         app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="88dp" />
+        app:layout_editor_absoluteY="88dp"
+        app:layout_constraintRight_toLeftOf="@+id/pass2"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="26dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
@@ -47,6 +67,13 @@
         android:layout_height="wrap_content"
         android:text="Password"
         app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="45dp" />
+        app:layout_editor_absoluteY="45dp"
+        app:layout_constraintRight_toLeftOf="@+id/pass1"
+        android:layout_marginRight="7dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.511" />
 
 </android.support.constraint.ConstraintLayout>
