--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -5,7 +5,7 @@
     android:id="@+id/notes">
 
     <Button
-        android:id="@+id/createPassword"
+        android:id="@+id/createNewPasswordButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="CreatePassword" />
