--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -9,29 +9,31 @@
 
     <EditText
         android:id="@+id/pass1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="153dp"
+        android:layout_height="33dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="7dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_editor_absoluteX="128dp"
-        app:layout_editor_absoluteY="45dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_editor_absoluteX="128dp"
+        app:layout_editor_absoluteY="45dp" />
 
     <EditText
         android:id="@+id/pass2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="153dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPassword"
-        app:layout_editor_absoluteY="88dp"
-        app:layout_editor_absoluteX="128dp"
-        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pass1"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_editor_absoluteX="128dp"
+        app:layout_editor_absoluteY="88dp" />
 
     <Button
         android:id="@+id/createPasswordButton"
@@ -40,40 +42,44 @@
         android:text="Create"
         app:layout_editor_absoluteX="128dp"
         app:layout_editor_absoluteY="131dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/pass2"
-        android:layout_marginLeft="8dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass2"
+        app:layout_constraintVertical_bias="0.261" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="65dp"
-        android:layout_height="46dp"
-        android:text="Password Again"
-        app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="88dp"
-        app:layout_constraintRight_toLeftOf="@+id/pass2"
-        android:layout_marginRight="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Re-type Password"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintRight_toLeftOf="@+id/pass2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_editor_absoluteX="53dp"
+        app:layout_editor_absoluteY="88dp" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password"
-        app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="45dp"
-        app:layout_constraintRight_toLeftOf="@+id/pass1"
-        android:layout_marginRight="7dp"
+        android:layout_width="114dp"
+        android:layout_height="16dp"
+        android:layout_marginEnd="7dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="7dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Password"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/pass1"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.511" />
+        app:layout_editor_absoluteX="53dp"
+        app:layout_editor_absoluteY="45dp" />
 
 </android.support.constraint.ConstraintLayout>
