--- a/app/src/main/res/layout/activity_entry_list_delete.xml
+++ b/app/src/main/res/layout/activity_entry_list_delete.xml
@@ -6,25 +6,34 @@
     android:layout_height="match_parent"
     tools:context="com.example.alexandrosandreadis.diary.EntryListDelete">
 
-    <ListView
-        android:layout_width="0dp"
-        android:layout_height="432dp"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
-
     <Button
         android:id="@+id/buttonCancel"
-        android:layout_width="264dp"
-        android:layout_height="495dp"
+        android:layout_width="134dp"
+        android:layout_height="51dp"
         android:text="Cancel"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
 
     <Button
         android:id="@+id/buttonDelete"
         android:layout_width="88dp"
         android:layout_height="48dp"
         android:text="DELETE"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp" />
+
+    <ListView
+        android:layout_width="361dp"
+        android:layout_height="465dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.571" />
 </android.support.constraint.ConstraintLayout>
