--- a/app/src/main/res/layout/activity_entrylist.xml
+++ b/app/src/main/res/layout/activity_entrylist.xml
@@ -20,6 +20,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="16dp" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/deleteEntryFloatingButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="328dp"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="368dp"
