--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -5,81 +5,104 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.alexandrosandreadis.diary.CreatePassword"
-    android:id="@+id/activity_create_passwords">
+    android:id="@+id/activity_create_passwords"
+    android:background="@drawable/bgleather"
+    >
 
     <EditText
         android:id="@+id/pass1"
-        android:layout_width="153dp"
-        android:layout_height="33dp"
+        android:layout_width="157dp"
+        android:layout_height="39dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="12dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="@android:color/white"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_editor_absoluteX="128dp"
         app:layout_editor_absoluteY="45dp" />
 
     <EditText
         android:id="@+id/pass2"
-        android:layout_width="153dp"
-        android:layout_height="32dp"
+        android:layout_width="154dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="0dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/createPasswordButton"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass1"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.882"
         app:layout_editor_absoluteX="128dp"
         app:layout_editor_absoluteY="88dp" />
 
     <Button
         android:id="@+id/createPasswordButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Create"
-        app:layout_editor_absoluteX="128dp"
-        app:layout_editor_absoluteY="131dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_width="118dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="280dp"
+        android:elevation="4dp"
+        android:fontFamily="casual"
+        android:text="Create password"
+        android:background="@drawable/mybutton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass2"
-        app:layout_constraintVertical_bias="0.261" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_editor_absoluteX="128dp"
+        app:layout_editor_absoluteY="131dp" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="176dp"
+        android:layout_height="22dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="14dp"
+        android:fontFamily="casual"
         android:text="Re-type Password"
-        app:layout_constraintHorizontal_bias="0.51"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/pass2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass1"
         app:layout_editor_absoluteX="53dp"
         app:layout_editor_absoluteY="88dp" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="114dp"
-        android:layout_height="16dp"
+        android:layout_width="97dp"
+        android:layout_height="28dp"
         android:layout_marginEnd="7dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="7dp"
+        android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:fontFamily="casual"
         android:text="Password"
-        app:layout_constraintHorizontal_bias="0.51"
+        android:textAlignment="center"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/pass1"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="45dp" />
+        app:layout_editor_absoluteY="45dp"
+        tools:layout_editor_absoluteX="153dp" />
 
 </android.support.constraint.ConstraintLayout>
