--- a/app/src/main/res/layout/activity_entry_list_delete.xml
+++ b/app/src/main/res/layout/activity_entry_list_delete.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.alexandrosandreadis.diary.EntryListDelete">
+    tools:context="com.example.alexandrosandreadis.diary.EntryListDelete"
+    android:background="@drawable/bgleather"
+    >
 
     <Button
         android:id="@+id/buttonCancel"
