--- a/app/src/main/res/layout/activity_entrylist.xml
+++ b/app/src/main/res/layout/activity_entrylist.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.alexandrosandreadis.diary.EntryList"
     android:id="@+id/activity_entrylist"
+    android:background="@drawable/bgleather"
     >
 
     <android.support.design.widget.FloatingActionButton
@@ -41,7 +42,6 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
