--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.alexandrosandreadis.diary.MainActivity"
-    android:id="@+id/activity_main">
+    android:id="@+id/activity_main"
+    android:background="@drawable/bgleather"
+    >
 
 
 </android.support.constraint.ConstraintLayout>
