--- a/app/src/main/res/layout/activity_unlock.xml
+++ b/app/src/main/res/layout/activity_unlock.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activity_unlock">
+    android:id="@+id/activity_unlock"
+    android:background="@drawable/bgleather"
+    >
 
     <EditText
         android:id="@+id/unlockPasswordField"
