--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -10,17 +10,16 @@
     >
 
     <EditText
+        style="@style/passwordstyle"
         android:id="@+id/pass1"
-        android:layout_width="157dp"
-        android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="9dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:textColor="@android:color/white"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -28,54 +27,47 @@
         app:layout_editor_absoluteY="45dp" />
 
     <EditText
+        style="@style/passwordstyle"
         android:id="@+id/pass2"
-        android:layout_width="154dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:textColor="@android:color/white"
-        app:layout_constraintBottom_toTopOf="@+id/createPasswordButton"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.882"
         app:layout_editor_absoluteX="128dp"
         app:layout_editor_absoluteY="88dp" />
 
     <Button
+        style="@style/buttonstyle"
         android:id="@+id/createPasswordButton"
-        android:layout_width="118dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="280dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="18dp"
         android:elevation="4dp"
-        android:fontFamily="casual"
-        android:text="Create password"
-        android:background="@drawable/mybutton"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Create"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pass2"
         app:layout_editor_absoluteX="128dp"
         app:layout_editor_absoluteY="131dp" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="176dp"
-        android:layout_height="22dp"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="14dp"
-        android:fontFamily="casual"
+        android:layout_marginTop="7dp"
+        android:fontFamily="sans-serif"
         android:text="Re-type Password"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -85,24 +77,20 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="97dp"
-        android:layout_height="28dp"
+        android:layout_width="85dp"
+        android:layout_height="33dp"
         android:layout_marginEnd="7dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="7dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:fontFamily="casual"
+        android:fontFamily="sans-serif"
         android:text="Password"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_editor_absoluteX="53dp"
         app:layout_editor_absoluteY="45dp"
-        tools:layout_editor_absoluteX="153dp" />
+        app:layout_constraintHorizontal_bias="0.501" />
 
 </android.support.constraint.ConstraintLayout>
