--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -11,46 +11,57 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="126dp"
-        android:layout_height="19dp"
-        android:text="@string/date"
-        app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="16dp"
+        android:layout_width="129dp"
+        android:layout_height="32dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/date"
+        android:textColor="@android:color/white"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_editor_absoluteX="16dp"
+        app:layout_editor_absoluteY="16dp" />
 
-    <EditText
+    <com.example.alexandrosandreadis.diary.LineEditText
         android:id="@+id/entry"
-        android:layout_width="320dp"
-        android:layout_height="219dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="8dp"
         android:background="@android:drawable/editbox_background_normal"
         android:ems="10"
         android:inputType="textMultiLine"
-        app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="47dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/date"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:layout_width="88dp"
-        android:layout_height="41dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/mybutton"
-        android:fontFamily="casual"
-        android:text="@string/saveButton"
-        android:textColor="@android:color/white"
+        android:gravity="top"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/entry" />
+        app:layout_constraintTop_toBottomOf="@+id/saveButton"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_editor_absoluteX="16dp"
+        app:layout_editor_absoluteY="47dp" />
+
+    <Button
+        style="@style/buttonstyle"
+        android:id="@+id/saveButton"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/saveButton"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        style="@style/buttonstyle"
+        android:id="@+id/qrButton"
+        android:text="Scan QR"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintRight_toLeftOf="@+id/saveButton"
+        android:layout_marginRight="8dp" />
 </android.support.constraint.ConstraintLayout>
