--- a/app/src/main/res/layout/activity_entry_list_delete.xml
+++ b/app/src/main/res/layout/activity_entry_list_delete.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.alexandrosandreadis.diary.EntryListDelete"
-    android:background="@drawable/bgleather"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context="com.example.alexandrosandreadis.diary.EntryListDelete"
+android:background="@drawable/bgleather"
     >
 
     <Button
+        style="@style/buttonstyle"
         android:id="@+id/buttonCancel"
-        android:layout_width="134dp"
-        android:layout_height="51dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
         android:text="Cancel"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        style="@style/buttonstyle"
         android:id="@+id/buttonDelete"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:text="DELETE"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
-
-    <ListView
-        android:id="@+id/listViewDelete"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
         android:layout_marginLeft="0dp"
+        android:layout_marginTop="0dp"
+        android:text="DELETE"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.571" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+<ListView
+    android:id="@+id/listViewDelete"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:layout_marginBottom="0dp"
+    android:layout_marginLeft="0dp"
+    android:layout_marginRight="0dp"
+    android:layout_marginTop="8dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintHorizontal_bias="0.0"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/buttonDelete"
+    app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
