--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -68,6 +68,7 @@
         android:layout_marginTop="7dp"
         android:fontFamily="sans-serif"
         android:text="Re-type Password"
+        android:textColor="@android:color/white"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -86,11 +87,12 @@
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:text="Password"
+        android:textColor="@android:color/white"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_editor_absoluteX="53dp"
-        app:layout_editor_absoluteY="45dp"
-        app:layout_constraintHorizontal_bias="0.501" />
+        app:layout_editor_absoluteY="45dp" />
 
 </android.support.constraint.ConstraintLayout>
