--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -11,8 +11,8 @@
 
     <TextView
         android:id="@+id/date"
-        android:layout_width="129dp"
-        android:layout_height="32dp"
+        android:layout_width="127dp"
+        android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
@@ -22,7 +22,9 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_editor_absoluteX="16dp"
-        app:layout_editor_absoluteY="16dp" />
+        app:layout_editor_absoluteY="16dp"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/entry" />
 
     <com.example.alexandrosandreadis.diary.LineEditText
         android:id="@+id/entry"
